add: nrepl + parse errors fn